# libgenc

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  README.md  configure.ac  gonc_list.h  install  memo.text  test.c
src/: CMakeLists.txt  Makefile.am  genc_Alist.h  genc_Args.h  genc_Array.h  genc_ArrayList.h  genc_Bits.h  genc_Bytes.h  genc_Djset  genc_Djset.h  genc_Generic.h  genc_HashMap.h  genc_Htree.h  genc_List.h  genc_Map.h  genc_Mtree.h  genc_Nstr_cat.h  genc_Nstr_ciCompare.h  genc_Nstr_compare.h  genc_Nstr_find.h  genc_Nstr_toInt.h  genc_Nstr_toStr.h  genc_SipHash.h  genc_SparseArray.h  genc_String.h  genc_Tree.h  genc_Uint_toNstr.h  genc_Uint_toStr.h  genc_args.h  genc_caseCompareNStr.h  genc_cast.h  genc_compareNStr.h  genc_hmap.h  genc_intToStr.h  genc_list.h  genc_ltostr.h  genc_nStrCat.h  genc_nStrNStr.h  genc_nStrStr.h  genc_nStrToInt.h  (+45 more)
test/: .genc_ArrayList_test.c.swp  CMakeLists.txt  genc_Alist_test.c  genc_ArrayList_test.c  genc_Array_test.c  genc_Generic_test.c  genc_HashMap_test.c  genc_Htree_test.c  genc_List_test.c  genc_Map_test.c  genc_Mtree_test.c  genc_Nstr_cat.c  genc_Nstr_ciCompare_test.c  genc_Nstr_compare_test.c  genc_Nstr_find_test.c  genc_Nstr_toInt_test.c  genc_String_test.c  genc_Tree_test.c  genc_Uint_toNstr_test.c  genc_Uint_toStr_test.c  genc_array_test.c  genc_caseCompareNStr_test.c  genc_cast_test.c  genc_compareNStr_test.c  genc_hmap_test.c  genc_list_test.c  genc_ltostr_test.c  genc_nStrNStr_test.c  genc_nStrStr_test.c  genc_nStrToInt_test.c  genc_nstrtoi_test.c  genc_strNStr_test.c  genc_uIntToNStr_test.c
