add_executable(genc_Array_test genc_Array_test.c)
add_test(NAME genc_Array_test COMMAND genc_Array_test)
add_executable(genc_List_test genc_List_test.c)
add_test(NAME genc_List_test COMMAND genc_List_test)
add_executable(genc_HashMap_test genc_HashMap_test.c)
add_test(NAME genc_HashMap_test COMMAND genc_HashMap_test)
add_executable(genc_uIntToNStr_test genc_uIntToNStr_test.c)
add_test(NAME genc_uIntToNStr_test COMMAND genc_uIntToNStr_test)
add_executable(genc_nStrToInt_test genc_nStrToInt_test.c)
add_test(NAME genc_nStrToInt_test COMMAND genc_nStrToInt_test)
